--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
     <div class="lcontainer" id="lcontainer">
         <div class="form-container sign-up">
-            <form>
+            <form >
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -29,7 +29,7 @@
             </form>
         </div>
         <div class="form-container sign-in">
-            <form>
+            <form id="login-form">
                 <h1>Sign In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -38,8 +38,8 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" id="username" placeholder="Email">
+                <input type="password" id="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
                 <button>Sign In</button>
             </form>
